kubernetes/ecostreet-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configuration-core
  managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:labels':
                .: {}
                'f:app': {}
            'f:spec':
              'f:containers':
                'k:{"name":"database-sha256-1"}':
                  .: {}
                  'f:image': {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
      manager: GoogleCloudConsole
      operation: Update
      time: '2021-11-14T14:58:20Z'
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      manager: kube-controller-manager
      operation: Update
      time: '2021-11-14T14:58:31Z'
  name: configuration-core
  namespace: ecostreet
spec:
  replicas: 3
  selector:
    matchLabels:
      app: configuration-core
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: configuration-core
    spec:
      containers:
        - image: gcr.io/synthetic-diode-337508/github.com/matejleskovsek/configuration
          imagePullPolicy: IfNotPresent
          name: configuration-sha256-1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app: configuration-core
  name: configuration-core-service
  namespace: ecostreet
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: configuration-core
  sessionAffinity: None
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: ecostreet
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dblogin
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbauthenticate
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbgetgames
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbaddgame
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbremovegame
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbupdate_ip
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbconfig
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbgetconfig
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbmetrics
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbhealthcheck
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /lg
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /lglogin
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /lgcommand
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /lgupdate_ip
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /lgconfig
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /lggetconfig
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /lgmetrics
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /lghealthcheck
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /cf
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /cfupdate
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /cfconfigupdate
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /cfgetconfig
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /cfmetrics
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /cfhealthcheck
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /ad
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /adaddgame
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /adremovegame
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /adupdate_ip
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /adconfig
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /adgetconfig
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /admetrics
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /adhealthcheck
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /pl
        pathType: Prefix
        backend:
          service:
            name: play-core-service
            port:
              number: 80
      - path: /plupdate_ip
        pathType: Prefix
        backend:
          service:
            name: play-core-service
            port:
              number: 80
      - path: /plconfig
        pathType: Prefix
        backend:
          service:
            name: play-core-service
            port:
              number: 80
      - path: /plgetconfig
        pathType: Prefix
        backend:
          service:
            name: play-core-service
            port:
              number: 80
      - path: /plmetrics
        pathType: Prefix
        backend:
          service:
            name: play-core-service
            port:
              number: 80
      - path: /plhealthcheck
        pathType: Prefix
        backend:
          service:
            name: play-core-service
            port:
              number: 80
      - path: /cfopenapi
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /cfswaggerui
        pathType: Prefix
        backend:
          service:
            name: configuration-core-service
            port:
              number: 80
      - path: /dbopenapi
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /dbswaggerui
        pathType: Prefix
        backend:
          service:
            name: database-core-service
            port:
              number: 80
      - path: /lgopenapi
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /lgswaggerui
        pathType: Prefix
        backend:
          service:
            name: ecostreet-core-service
            port:
              number: 80
      - path: /adopenapi
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /adswaggerui
        pathType: Prefix
        backend:
          service:
            name: admin-core-service
            port:
              number: 80
      - path: /plopenapi
        pathType: Prefix
        backend:
          service:
            name: play-core-service
            port:
              number: 80
      - path: /plswaggerui
        pathType: Prefix
        backend:
          service:
            name: play-core-service
            port:
              number: 80
